# privateGPT

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  query.py  server.py
